# kursach

./: CMakeLists.txt  app.cpp  app.h  bubble_sort.cpp  choice_sort.cpp  heap_sort.cpp  insertion_sort.cpp  kursach.cpp  lab1.cpp  quick_sort.cpp  util.h
